--- a/Product Landing Page.html
+++ b/Product Landing Page.html
@@ -3,12 +3,13 @@
     <head>
         <title>Product Landing Page</title>
         <link rel="stylesheet" href="Product Landing Page.css">
+        <link rel="icon shortcut" href="./icons/pngwing.com.png">
         <script src="https://kit.fontawesome.com/5869e586c5.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header id="header">
             <div id="logo">
-                <img id="header-img" src="product-landing-page-logo.png">
+                <img id="header-img" src="./images/Western-Digital-logo-scaled-removebg-preview-removebg-preview.png">
             </div>
             <nav id="nav-bar">
                 <ul>
@@ -20,7 +21,9 @@
         </header>
         <main>
             <section id="form-section">
-                <h2>Handcrafted, home-made masterpieces</h2>
+                <h2>Breaking Barriers with 22TB</h2>
+                <p id="description">Bigger, Better, Faster with OptiNAND Technology</p>
+                <p id="signup">signup for the latest update about our products</p>
                 <form id="form" action="https://www.freecodecamp.com/email-submit">
                     <input type="email" name="email" id="email" placeholder="Enter your email address" required>
                     <input type="submit" id="submit" value="Get Started">
@@ -30,72 +33,72 @@
                 <section class="features" id="Features">
                     <div class="featured-items">
                         <div class="icon">
-                            <i class="fa-solid fa-3x fa-fire-flame-curved"></i>
+                            <i class="fa-solid fa-3x fa-gauge-high"></i>
                         </div>
                         <div class="featured-items-disc">
-                            <h2>Premium Materials</h2>
-                            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.
+                            <h2>High performance</h2>
+                            <p>reliability and workload capability for advanced AI-enabled recorders,  video analytics appliances, deep-learning servers and cloud-based storage, including RAID and JBOD configurations.</p>
                         </div>
                     </div>
                     <div class="featured-items">
                         <div class="icon">
-                            <i class="fa-solid fa-3x fa-truck"></i>
+                            <i class="fa-solid fa-3x fa-hard-drive"></i>
                         </div>
                         <div class="featured-items-disc">
-                            <h2>Fast Shipping</h2>
-                            <p>We make sure you receive your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.
+                            <h2>Reliable storage space</h2>
+                            <p>Supports up to 550 TB/yr workload rate3 in 8TB –22TB1.</p>
                         </div>
                     </div>
                     <div class="featured-items">
                         <div class="icon">
-                            <i class="fa-solid fa-3x fa-battery-full"></i>
+                            <i class="fa-solid fa-3x fa-shield-halved"></i>
                         </div>
                         <div class="featured-items-disc">
-                            <h2>Quality Assurance</h2>
-                            <p>For every purchase you make, we will ensure there are no damages of faults and we will check and test the pitch of your instrument.
+                            <h2>Robust design</h2>
+                            <p>Designed with tarnish-resistant components for harsh environments, and with additional robustness for multi-bay enclosures.</p>
                         </div>
                     </div>
                 </section>
             </div>
             <section id="How It Works">
-                <iframe src="https://www.youtube.com/embed/y8Yv4pnO7qc" id="video" allowfullscreen></iframe>
+                <iframe id="video" src="https://www.youtube.com/embed/W2QpT10Rfyw" allowfullscreen></iframe>
             </section>
             <section class="pricing" id="Pricing">
                 <div class="products">
-                    <div class="product-title">TENOR TROMBONE</div>
+                    <div class="product-title">WD Purple Pro 14TB</div>
                     <div class="product-details">
-                        <h2 class="product-price">$600</h2>
+                        <h2 class="product-price">$375.99</h2>
                         <ol>
-                            <li>Lorem ipsum.</li>
-                            <li>Lorem ipsum.</li>
-                            <li>Lorem ipsum dolor.</li>
-                            <li>Lorem ipsum.</li>
+                            <li>14TB Capacity</li>
+                            <li>512 MB Cache size<li>
+                            <li>3.5 Inch form factor</li>
+                            <li>7200rpm Disk speed (RPM)</li>
                         </ol>
                     </div>
                     <button type="button" >SELECT</button>
                 </div>
                 <div class="products">
-                    <div class="product-title">BASS TROMBONE</div>
+                    <div class="product-title">WD Purple Pro 18TB</div>
                     <div class="product-details">
-                        <h2 class="product-price">$900</h2>
+                        <h2 class="product-price">$465.99</h2>
                         <ol>
-                            <li>Lorem ipsum.</li>
-                            <li>Lorem ipsum.</li>
-                            <li>Lorem ipsum dolor.</li>
-                            <li>Lorem ipsum.</li>
+                            <li>18TB Capacity</li>
+                            <li>512 MB Cache size<li>
+                            <li>3.5 Inch form factor</li>
+                            <li>7200rpm Disk speed (RPM)</li>
                         </ol>
                     </div>
                     <button type="button">SELECT</button>
                 </div>
                 <div class="products">
-                    <div class="product-title">VALUE TROMBONE</div>
+                    <div class="product-title">WD Purple Pro 22TB</div>
                     <div class="product-details">
-                        <h2 class="product-price">$1200</h2>
+                        <h2 class="product-price">$599.99</h2>
                         <ol>
-                            <li>Plays similar to a Trumpet</li>
-                            <li>Great for Jazz Bands</li>
-                            <li>Lorem ipsum dolor.</li>
-                            <li>Lorem ipsum.</li>
+                            <li>22TB Capacity</li>
+                            <li>512 MB Cache size<li>
+                            <li>3.5 Inch form factor</li>
+                            <li>7200rpm Disk speed (RPM)</li>
                         </ol>
                     </div>
                     <button type="button">SELECT</button>
@@ -108,7 +111,7 @@
                 <li><a href="#">Terms</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <span>Copyright &copy; 2016, Original trombones</span>
+            <span>These are some fake product details<span>
         </footer>
     </body>
 </html>
